<resources>
    <string name="app_name">GPS Camera: Geotag Photos</string>

    <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="fb_app_id" translatable="false"></string>
    <string name="facebook_client_token" translatable="false"></string>
    <string name="rating_email" translatable="false"></string>

    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="arabic">Arabic</string>
    <string name="bengali">Bengali</string>
    <string name="russian">Russian</string>
    <string name="portuguese">Portuguese</string>
    <string name="indonesian">Indonesian</string>
    <string name="german">German</string>
    <string name="italian">Italian</string>
    <string name="korean">Korean</string>
    <string name="please_select_language">Please select language first.</string>
    <string name="next">Next</string>
    <string name="title_intro_1">Take photo with location</string>
    <string name="title_intro_2">Multi template</string>
    <string name="title_intro_3">Geotag on photo</string>
    <string name="splash_title" translatable="false">GPS Camera: \nGeotag Photos</string>
    <string name="message_intro_1">Capture memories with location data - Preserve the where in every snapshot effortlessly</string>
    <string name="message_intro_2">Effortless photo categorization with multi template - Simplify your visual journey</string>
    <string name="message_intro_3">Capture the moment and add location existing photos</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="ads_warning">This action can contain ads…</string>
    <string name="start">Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="theme">Theme</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="location">Location</string>
    <string name="latlng">Lat/Long</string>
    <string name="time">1:51 PM</string>
    <string name="temperature">30°C</string>
    <string name="date">Date</string>
    <string name="united_states"><u>United States</u></string>
    <string name="best_travel"><u>Best Travel</u></string>
    <string name="memories"><u>Memories</u></string>
    <string name="new_york"><u>New York</u></string>
    <string name="times">Time</string>
    <string name="warning">Are you sure you want to \nDelete this item?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="warning_title">Warning</string>
    <string name="saved_video">Saved video</string>
    <string name="saved_image">Saved image</string>
    <string name="search">Search</string>
    <string name="find_location">Find location</string>
    <string name="date_format">Date Format</string>
    <string name="time_format">Time Format</string>
    <string name="current_date_amp_time">Current Date &amp; Time</string>
    <string name="custom_date_amp_time">Custom Date &amp; Time</string>
    <string name="select_date_amp_time">Select Date &amp; Time</string>
    <string name="save">Save</string>
    <string name="tap_to_set">Tap to set</string>
    <string name="select_time">Please select time</string>
    <string name="select_date">Please select date</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="languages">Languages</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="date_amp_time_type">Date &amp; Time Type</string>
    <string name="date_amp_time_format">Date &amp; Time Format</string>
    <string name="daily">Daily</string>
    <string name="saved_img">Saved Image</string>
    <string name="apply">Apply</string>
    <string name="map_type">Map type</string>
    <string name="camera">Camera</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="travel">Travel</string>
    <string name="gps">GPS</string>
    <string name="view_all">View All</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="share">Share</string>
    <string name="information">Infor</string>
    <string name="sort_by">Sort by</string>
    <string name="name">Name</string>
    <string name="file_size">File size</string>
    <string name="date_added">Date added</string>
    <string name="home_title">GPS Camera: Geotag Photos</string>
    <string name="edit_photo_subtitle">Add location to existing photos</string>
    <string name="saved">Saved</string>
    <string name="image">Image</string>
    <string name="setting">Setting</string>
    <string name="setting_map">Map Setting</string>
    <string name="rating">Rating</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="size">Size</string>
    <string name="path">Path</string>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="image_deleted_successfully">Image deleted successfully</string>
    <string name="failed_to_delete_image">Failed to delete image</string>
    <string name="skip">Skip for now</string>
    <string name="photo_access">Photo Library Access</string>
    <string name="location_access">Location Access</string>
    <string name="micro_access">Microphone Access</string>
    <string name="camera_access">Camera Access</string>
    <string name="permission_description">We need to grant access to the device camera, Photo Library and Location to take photos or record video.</string>
    <string name="current_location">Current Location</string>
    <string name="front_camera_does_not_support_flash">Front camera does not support flash</string>
    <string name="error_taking_photo_please_try_again">Error taking photo \nPlease try again</string>
    <string name="preview">Preview</string>
    <string name="custom">Custom</string>
    <string name="warning_camera_permission">Please grant permission to use the photo capture feature</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="_12_hours">12 hours</string>
    <string name="_24_hours">24 hours</string>
    <string name="processing">Saving video…</string>
    <string name="success">Video saved successfully</string>
    <string name="warning_camera_location_permission">Please grant all necessary permissions to use this feature.</string>
    <string name="saving_image">Saving image</string>
    <string name="image_saved_successfully">Image saved successfully!</string>
    <string name="save_image_failed">Save image failed!</string>
    <string name="flash_not_available_in_video_mode">Flash is not available in video mode</string>
    <string name="Continue">Continue</string>
    <string name="share_to">Share to</string>
    <string name="hint_per_camera">To start using the camera, please turn on access \nyour camera and microphone</string>
    <string name="grant_access">Grant access</string>
    <string name="til_per_camera"><![CDATA[Needs access to camera & microphone]]></string>
    <string name="til_per_gallery">Allow access to your photo library to select images</string>
    <string name="hint_per_gallery">To continue, please allow access to your photo library so you can choose images from your device.</string>
    <string name="til_per_location">Allow access to your location to provide location-based features.</string>
    <string name="hint_per_location">To continue, please allow access to your location. This helps us provide relevant content based on where you are.</string>
    <string name="go_to_setting">Go to setting</string>
    <string name="take_photo">Take a photo</string>
    <string name="content_take_photo">Capture those wonderful moment now</string>
    <string name="version">Version</string>
    <string name="template">Template</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="loading_address">Loading address...</string>
    <string name="location_saved_successfully">Location saved successfully</string>
    <string name="no_location_selected">No location selected</string>
    <string name="error_receiving_photo">Error receiving photo</string>
    <string name="unable_to_load_photos_from_album">Unable to load photos from album</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="error_while_playing_video">Error while playing video</string>
    <string name="unable_to_request_delete_permission">Unable to request delete permission</string>
    <string name="template_not_loaded_message">Please wait until the template loads successfully.</string>
    <string name="image_saving_failed_please_try_again">Image saving failed. Please try again.</string>
    <string name="current">Current</string>
    <string name="manual">Manual</string>
    <string name="unknow_location">Unknown Location</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="no_photos">"No photo "</string>
</resources>