<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="13dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:paddingHorizontal="12dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_date_amp_time"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDate"
            style="@style/medium_500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/neutralGrey"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvValueDate"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/stroke_round_border"
            android:backgroundTint="@color/neutralGrey"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDate" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTime"
            style="@style/medium_500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/times"
            android:textColor="#626262"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvValueDate" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvValueTime"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/stroke_round_border"
            android:backgroundTint="@color/neutralGrey"
            android:gravity="center_vertical"
            android:paddingHorizontal="16dp"
            android:text="@string/time"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTime" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvValueTime">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnCancel"
                style="@style/medium_500"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="9dp"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/stroke_round_border"
                android:text="@string/cancel"
                android:textAllCaps="false" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btnSave"
                style="@style/medium_500"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="9dp"
                android:gravity="center"
                android:layout_weight="1"
                android:background="@drawable/rounded_blue_button"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>