<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
  >

    <View
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:background="@drawable/drag_handle_bg"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="4dp">

        <TextView
            android:id="@+id/tvSortBy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="18dp"
            android:text="@string/sort_by"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Close"
            android:src="@drawable/ic_exit"
            app:tint="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutSortOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="12dp"
        >

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="12dp"
            android:padding="12dp"
            android:text="@string/name"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:background="?android:attr/selectableItemBackground"
            app:drawableStartCompat="@drawable/ic_unchecked_language" />

        <TextView
            android:id="@+id/tvFileSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="12dp"
            android:padding="12dp"
            android:text="@string/file_size"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:background="?android:attr/selectableItemBackground"
            app:drawableStartCompat="@drawable/ic_unchecked_language" />

        <TextView
            android:id="@+id/tvDateAdded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="12dp"
            android:padding="12dp"
            android:text="@string/date_added"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:background="?android:attr/selectableItemBackground"
            app:drawableStartCompat="@drawable/ic_selected" />
    </LinearLayout>


</LinearLayout>
