<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="24dp"
    app:cardElevation="0dp"
    app:cardBackgroundColor="@android:color/transparent"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:paddingVertical="16dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warning_title"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:textColor="#000000"/>

            <ImageButton
                android:id="@+id/btnCloseDialog"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="Close"
                android:src="@drawable/ic_exit" />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warning"
            android:textColor="@color/black"
            android:layout_marginHorizontal="24dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
         />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="24dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnClCancel"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textColor="@color/neutralGrey"
                android:layout_marginEnd="8dp"
                android:background="@drawable/stroke_round_border"
                android:backgroundTint="@color/neutralGrey"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnClStop"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/delete"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_marginStart="8dp"
                android:background="@drawable/rounded_blue_button"
                android:backgroundTint="@color/colorError"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>