<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="328dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="24dp"
    app:cardBackgroundColor="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/information"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:textColor="#000000"/>

            <ImageButton
                android:id="@+id/btnClose"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="Close"
                android:src="@drawable/ic_exit" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:text="Mdjcc.jpg"
                android:textColor="#888888"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/size"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/tvSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="24 MB"
                android:layout_alignParentEnd="true"
                android:textColor="#888888"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/times"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1:23 PM 05/01/2024"
                android:layout_alignParentEnd="true"
                android:textColor="#888888"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New York, United States"
                android:layout_alignParentEnd="true"
                android:textColor="#888888"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingEnd="12dp">

            <TextView
                android:id="@+id/tvLabel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/path"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/tvPath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/DCIM/Saved/.jpg"
                android:textColor="#888888"
                android:layout_toEndOf="@id/tvLabel"
                android:layout_alignBaseline="@id/tvLabel"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnOk"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="OK"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:background="@drawable/rounded_blue_button"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>