<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".presentation.mainscreen.activity.RequestPermissionActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imv_back"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="20dp"
        android:background="?attr/actionBarItemBackground"
        android:scaleType="centerInside"
        android:src="@drawable/ic_exit"
        android:backgroundTint="@color/neutralGrey"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imv_banner"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_per_camera"
        app:layout_constraintBottom_toTopOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/til_per_camera"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="2dp"
        android:textColor="@color/neutralGrey"
        android:gravity="center"
        android:text="@string/hint_per_camera"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btn_grant"
        android:layout_width="125dp"
        android:layout_height="39dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_blue_button"
        android:fontFamily="@font/nunito_sans_semi_bold"
        android:gravity="center"
        android:paddingHorizontal="16dp"
        android:text="@string/grant_access"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

</androidx.appcompat.widget.LinearLayoutCompat>